# cpplanes

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.rst
cmake/: FindEigen3.cmake
python/: TargetArch.dia  example.py  example_1D.py  example_2D.py  square.edp
python/pyplanes/: FEM.py  __init__.py  domain.py  system.py
python/pyplanes/bc/: __init__.py  base_bc.py  rigid_wall.py  unit.py
python/pyplanes/integration/: __init__.py  base_integration.py  gauss_legendre.py
python/pyplanes/interp/: __init__.py  base_interp.py  gauss_legendre.py  lagrange.py
python/pyplanes/materials/: __init__.py  base_material.py  fluid.py
python/pyplanes/mesh/: __init__.py  base_mesh.py  mesh1d.py
python/pyplanes/mesh/readers/: __init__.py  freefem.py
src/: Domain.cxx  Domain.h  LinearSystem.cxx  LinearSystem.h  Medium.h  Mesh.cxx  Mesh.h  config.h  domain.h  mathutils.h  method.h  types.h  utils.h
src/FEM/: FEM.cpp  FEM.h
src/bc/: bc.h
src/domain/: base_domain.cpp  base_domain.h  fem_domain.h
src/integration/: gauss_legendre.cpp  gauss_legendre.h  integration_scheme.h
src/interpolation/: interpolator.cpp  interpolator.h  linear_lagrange.cpp  linear_lagrange.h  linear_lagrange1d.cpp  linear_lagrange1d.h
src/medium/: air.cpp  air.h  fluid.cpp  fluid.h  medium.cpp  medium.h
src/mesh/: base_mesh.cpp  base_mesh.h  edge.cpp  edge.h  element.cpp  element.h  mesh.h  mesh1d.h
src/methods/: Method.h
src/methods/se2/: SE2.cxx  SE2.h
utils/: fetch_deps.sh  options.astyle  python_setup.sh
